[gd_scene load_steps=14 format=3 uid="uid://dllgfpbd7ifvp"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_aygar"]
[ext_resource type="Texture2D" uid="uid://65s0fucidsbi" path="res://assets/fly.png" id="2_irusb"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fkcol"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ynqeo"]
animation = &"Stun"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bmf8a"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1myg7"]
states/Idle/node = SubResource("AnimationNodeAnimation_fkcol")
states/Idle/position = Vector2(296, 69)
states/Stun/node = SubResource("AnimationNodeAnimation_ynqeo")
states/Stun/position = Vector2(521, 85)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_bmf8a")]

[sub_resource type="Animation" id="Animation_xx2th"]
resource_name = "Idle"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_2upwm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dgyd3"]
resource_name = "Stun"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4axif"]
_data = {
"Idle": SubResource("Animation_xx2th"),
"RESET": SubResource("Animation_2upwm"),
"Stun": SubResource("Animation_dgyd3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2eqqs"]
size = Vector2(16, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysou7"]
size = Vector2(15, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_xjb4c"]
radius = 6.0

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 8
collision_mask = 2
script = ExtResource("1_aygar")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1myg7")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4axif")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_irusb")
hframes = 6

[node name="JumpBox" type="Area2D" parent="."]

[node name="JumpBox" type="CollisionShape2D" parent="JumpBox"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_2eqqs")

[node name="HitBox" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ysou7")

[node name="StunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_xjb4c")

[connection signal="area_entered" from="JumpBox" to="." method="_on_jump_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
